--- a/css/style.css
+++ b/css/style.css
@@ -4,35 +4,191 @@
     --color-logo: #4D5AE5;
     --minor-color: #E7E9FC;
     --two-color-logo: #F4F4FD;
+    --primery-bg-color: #fff;
 }
 
+
+/* Used class */
 .list {
     list-style: none;
 }
 
+.title-none {
+    display: none;
+}
+.body {
+    font-family: Roboto, sans-serif;
+    color: var(--primery-text-color);
+}
+/* Header */
+
+
+.header {
+    background-color: var(--primery-bg-color);
+}
+/* Лого */
+.web-logo {
+    font-family: 'Raleway';
+font-style: normal;
+font-weight: 800;
+font-size: 18px;
+line-height: 1.3;
+display: flex;
+align-items: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+    color: var(--color-logo);
+}
+.studio-logo {
+    font-family: 'Raleway';
+font-style: normal;
+font-weight: 800;
+font-size: 18px;
+line-height: 1.3;
+display: flex;
+align-items: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+    color: var(--primery-text-color);
+}
+/* Навігація */
+.navigation-link {
+font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+    color: var(--primery-text-color);
+}
+.navigation-link:hover, .navigation-link:focus {
+    color: var(--text-color);
+}
+.navigation-link:active {
+    color: var(--color-logo);
+}
+
+
+/* Контакти */
+.address {
+font-style: normal;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+    color: var(--text-color);
+}
+.address:hover, .address:focus {
+    color: var(--color-logo);
+}
+
+/* Pages Studio */
+
+
 /* Main content */
 .body {
-    background-color: #fff;
+    background-color: var(--primery-bg-color);
 }
-/* Section 1 Hero */
 .hero {
     background-color: var(--primery-text-color);
 }
 .hero-title {
-    color: #fff;
+    font-style: normal;
+font-weight: 600;
+font-size: 56px;
+line-height: 1.071;
+text-align: center;
+letter-spacing: 0.02em;
+    color: var(--primery-bg-color);
 }
 .btn {
-    color: #fff;
+    font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 1.18;
+display: flex;
+align-items: center;
+letter-spacing: 0.04em;
+    color: var(--primery-bg-color);
     background-color: var(--color-logo);
+    border-color: var(--color-logo);
+    cursor: pointer;
 }
 
-/* Section 2 */
+
 .title {
     color: var(--primery-text-color);
 }
 .text {
     color: var(--text-color);
 }
+
+.description.title {
+    font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+}
+.description.text {
+font-size: 16px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+}
 .secondary-title {
+    font-style: normal;
+font-weight: 600;
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
     color: var(--primery-text-color);
+}
+.team.title {
+    font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 1.2;
+text-align: center;
+letter-spacing: 0.02em;
+}
+.team.text {
+font-size: 16px;
+line-height: 1.5;
+text-align: center;
+letter-spacing: 0.02em;
+}
+
+
+/* Pages portfolio */
+.button {
+    font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 1.5;
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.04em;
+    background-color: var(--minor-color);
+    color: var(--color-logo);
+    border-color: var(--two-color-logo);
+    cursor: pointer;
+}
+.button:hover, .button:focus {
+    background-color: var(--color-logo);
+    color: var(--primery-bg-color);
+    border-color: var(--color-logo);
+}
+/* Footer */
+.footer {
+    background-color: var(--primery-text-color);
+}
+.secondary.studio-logo {
+    color:  var(--two-color-logo);
+}
+.footer-text {
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+    color: var(--minor-color);
 }
