--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ letter-spacing: 0.02em;
     color: var(--primery-bg-color);
 }
 .btn {
+    font-family: inherit;
 font-weight: 600;
 font-size: 16px;
 line-height: 1.2;
@@ -142,6 +143,7 @@ letter-spacing: 0.02em;
 
 /* Pages portfolio */
 .button {
+    font-family: inherit;
 font-weight: 600;
 font-size: 16px;
 line-height: 1.5;
