--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ font-weight: 600;
 font-size: 16px;
 line-height: 1.2;
 letter-spacing: 0.04em;
+text-align: center;
     color: var(--primery-bg-color);
     background-color: var(--color-logo);
     border-color: var(--color-logo);
@@ -147,6 +148,7 @@ letter-spacing: 0.02em;
 font-weight: 600;
 font-size: 16px;
 line-height: 1.5;
+text-align: center;
 letter-spacing: 0.04em;
     background-color: var(--minor-color);
     color: var(--color-logo);
