--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ font-weight: 800;
 font-size: 18px;
 line-height: 1.3;
 letter-spacing: 0.03em;
+text-decoration: none;
 text-transform: uppercase;
     color: var(--color-logo);
 }
@@ -42,6 +43,7 @@ font-weight: 800;
 font-size: 18px;
 line-height: 1.3;
 letter-spacing: 0.03em;
+text-decoration: none;
 text-transform: uppercase;
     color: var(--primery-text-color);
 }
@@ -51,6 +53,7 @@ font-weight: 600;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+text-decoration: none;
     color: var(--primery-text-color);
 }
 .navigation-link:hover, .navigation-link:focus {
@@ -66,6 +69,7 @@ letter-spacing: 0.02em;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+text-decoration: none;
     color: var(--text-color);
 }
 .address:hover, .address:focus {
@@ -87,6 +91,7 @@ font-weight: 600;
 font-size: 56px;
 line-height: 1.07;
 letter-spacing: 0.02em;
+text-align: center;
     color: var(--primery-bg-color);
 }
 .btn {
@@ -126,6 +131,7 @@ font-weight: 600;
 font-size: 36px;
 line-height: 1.1;
 letter-spacing: 0.02em;
+text-align: center;
 text-transform: capitalize;
     color: var(--primery-text-color);
 }
