--- a/css/style.css
+++ b/css/style.css
@@ -27,24 +27,20 @@
     background-color: var(--primery-bg-color);
 }
 /* Лого */
-.web-logo {
+.logo {
     font-family: 'Raleway';
-font-weight: 800;
-font-size: 18px;
-line-height: 1.3;
-letter-spacing: 0.03em;
-text-decoration: none;
-text-transform: uppercase;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.3;
+    display: flex;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+.web-logo {
     color: var(--color-logo);
 }
 .studio-logo {
-    font-family: 'Raleway';
-font-weight: 800;
-font-size: 18px;
-line-height: 1.3;
-letter-spacing: 0.03em;
-text-decoration: none;
-text-transform: uppercase;
     color: var(--primery-text-color);
 }
 /* Навігація */
